--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <nav>
           <ul>
-            <li><a href="#">Intro</a></li>
-            <li><a href="#">Top 3</a></li>
+            <li><a href="#intro">Intro</a></li>
+            <li><a href="#top3">Top 3</a></li>
             <li><a href="#">Galeria</a></li>
             <li><a href="#">Trabalhos</a></li>
             <li><a href="#">Contato</a></li>
@@ -23,7 +23,8 @@
       </section>
     </header>
     <div class="menu-spacing"></div>
-    <section class="main-bg main-section">
+
+    <section id="intro" class="main-bg main-section">
       <div class="main-content intro-content">
         <div class="intro-text-content">
           <h2>Lading Page desenvolvida em html, css e JS</h2>
@@ -47,6 +48,28 @@
       </div>
     </section>
 
-    <section class="white-bg main-section"></section>
+    <section id="top3" class="white-bg main-section">
+      <div class="main-content top3-content">
+        <h2>Top 3 trabalhos</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+          quibusdam laborum officiis iste beatae obcaecati repellat, et
+          veritatis provident culpa iusto id sequi corrupti magni repellendus,
+          placeat corporis esse architecto.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          sequi facilis, autem, cupiditate consequuntur, rem accusantium impedit
+          nesciunt architecto corporis possimus! Sed laborum veniam quod
+          voluptatem expedita, quasi ratione possimus!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          sunt explicabo dignissimos. Distinctio autem praesentium corporis
+          suscipit nostrum, beatae asperiores reprehenderit quasi ratione, vitae
+          minus iusto ipsa reiciendis et! Obcaecati?
+         </p>
+      </div>
+    </section>
   </body>
 </html>
