--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <ul>
             <li><a href="#intro">Intro</a></li>
             <li><a href="#top3">Top 3</a></li>
-            <li><a href="#">Galeria</a></li>
+            <li><a href="#description">Descrição</a></li>
+            <li><a href="#gallery">Galeria</a></li>
             <li><a href="#">Trabalhos</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
@@ -51,24 +52,69 @@
     <section id="top3" class="white-bg main-section">
       <div class="main-content top3-content">
         <h2>Top 3 trabalhos</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-          quibusdam laborum officiis iste beatae obcaecati repellat, et
-          veritatis provident culpa iusto id sequi corrupti magni repellendus,
-          placeat corporis esse architecto.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-          sequi facilis, autem, cupiditate consequuntur, rem accusantium impedit
-          nesciunt architecto corporis possimus! Sed laborum veniam quod
-          voluptatem expedita, quasi ratione possimus!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          sunt explicabo dignissimos. Distinctio autem praesentium corporis
-          suscipit nostrum, beatae asperiores reprehenderit quasi ratione, vitae
-          minus iusto ipsa reiciendis et! Obcaecati?
-         </p>
+        <p>Breve descrição sobre o assunto</p>
+        <div>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+            quibusdam laborum officiis iste beatae obcaecati repellat, et
+            veritatis provident culpa iusto id sequi corrupti magni repellendus,
+            placeat corporis esse architecto.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            sequi facilis, autem, cupiditate consequuntur, rem accusantium
+            impedit nesciunt architecto corporis possimus! Sed laborum veniam
+            quod voluptatem expedita, quasi ratione possimus!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+            sunt explicabo dignissimos. Distinctio autem praesentium corporis
+            suscipit nostrum, beatae asperiores reprehenderit quasi ratione,
+            vitae minus iusto ipsa reiciendis et! Obcaecati?
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="description" class="main-bg">
+      <div class="description-content main-content">
+        <h2 class="drescription-heading">Descrição dos principais trabalhos</h2>
+        <p class="description-paragraph">Uma breve descrição do asunto que está por vim</p>
+        <div class="grid">
+          <article>
+            <h3>Titulo</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+              quibusdam laborum officiis iste beatae obcaecati repellat, et
+              veritatis provident culpa iusto id sequi corrupti magni repellendus,
+              placeat corporis esse architecto.
+            </p>
+          </article>
+          <article>
+            <h3>Titulo</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+              quibusdam laborum officiis iste beatae obcaecati repellat, et
+              veritatis provident culpa iusto id sequi corrupti magni repellendus,
+              placeat corporis esse architecto.
+            </p>
+          </article>
+          <article>
+            <h3>Titulo</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+              quibusdam laborum officiis iste beatae obcaecati repellat, et
+              veritatis provident culpa iusto id sequi corrupti magni repellendus,
+              placeat corporis esse architecto.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="gallery" class="main-section white-bg">
+      <div class="main-content">
+        <h1>Test</h1>
       </div>
     </section>
   </body>
