--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="menu white-bg">
       <section class="main-content menu-content">
-        <h1><a href="#">LOGO</a></h1>
+        <h1><a href="#intro">LOGO</a></h1>
 
         <nav>
           <ul>
@@ -78,33 +78,35 @@
     <section id="description" class="main-bg">
       <div class="description-content main-content">
         <h2 class="drescription-heading">Descrição dos principais trabalhos</h2>
-        <p class="description-paragraph">Uma breve descrição do asunto que está por vim</p>
+        <p class="description-paragraph">
+          Uma breve descrição do asunto que está por vim
+        </p>
         <div class="grid">
           <article>
             <h3>Titulo</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-              quibusdam laborum officiis iste beatae obcaecati repellat, et
-              veritatis provident culpa iusto id sequi corrupti magni repellendus,
-              placeat corporis esse architecto.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Doloribus quibusdam laborum officiis iste beatae obcaecati
+              repellat, et veritatis provident culpa iusto id sequi corrupti
+              magni repellendus, placeat corporis esse architecto.
             </p>
           </article>
           <article>
             <h3>Titulo</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-              quibusdam laborum officiis iste beatae obcaecati repellat, et
-              veritatis provident culpa iusto id sequi corrupti magni repellendus,
-              placeat corporis esse architecto.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Doloribus quibusdam laborum officiis iste beatae obcaecati
+              repellat, et veritatis provident culpa iusto id sequi corrupti
+              magni repellendus, placeat corporis esse architecto.
             </p>
           </article>
           <article>
             <h3>Titulo</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-              quibusdam laborum officiis iste beatae obcaecati repellat, et
-              veritatis provident culpa iusto id sequi corrupti magni repellendus,
-              placeat corporis esse architecto.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Doloribus quibusdam laborum officiis iste beatae obcaecati
+              repellat, et veritatis provident culpa iusto id sequi corrupti
+              magni repellendus, placeat corporis esse architecto.
             </p>
           </article>
         </div>
@@ -113,7 +115,46 @@
 
     <section id="gallery" class="main-section white-bg">
       <div class="main-content">
-        <h1>Test</h1>
+        <h2 class="drescription-heading">Galeria</h2>
+        <p>Breve descrição</p>
+        <div class="grid">
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=1"
+              alt="Imagen aleátorio do site unsplash?"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=2"
+              alt="Imagen aleátorio do site unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=3"
+              alt="Imagen aleátorio do site unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=4"
+              alt="Imagen aleátorio do site unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=5"
+              alt="Imagen aleátorio do site unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=6"
+              alt="Imagen aleátorio do site unsplash"
+            />
+          </div>
+        </div>
       </div>
     </section>
   </body>
