--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#top3">Top 3</a></li>
             <li><a href="#description">Descrição</a></li>
             <li><a href="#gallery">Galeria</a></li>
-            <li><a href="#">Trabalhos</a></li>
+            <li><a href="#pricing">Preços</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
@@ -153,6 +153,51 @@
               src="https://source.unsplash.com/random/360x360?r=6"
               alt="Imagen aleátorio do site unsplash"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="pricing" class="main-bg main-section">
+      <div class="table-content">
+        <h2>Preços</h2>
+
+        <div class="pricing-content main-content ">
+          <div class="plan">
+            <h4>Normal</h4>
+            <div class="price">FREE</div>
+            <ul class="features">
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Positivo"> Unlimited Calls</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Positivo"> User</li>
+              <li><img src="assets/img/nocheck-circle.svg" alt="Marcador Negativo"> Unlimited Emails</li>
+              <li><img src="assets/img/nocheck-circle.svg" alt="Marcador Negativo"> No priority support</li>
+            </ul>
+            <button>Signup</button>
+          </div>
+          <div class="plan popular">
+            <span>Most Popular</span>
+            <h4>Pro</h4>
+            <div class="price">$10/month</div>
+            <ul class="features">
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Positivo"> Unlimited Calls</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Positivo"> Unlimited Login</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Negativo"> Unlimited Sms</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Negativo"> Unlimited Emails</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Negativo"> Suport Emails</li>
+            </ul>
+            <button>Buy Now</button>
+          </div>
+          <div class="plan">
+            <h4>Enterprise</h4>
+            <div class="price">Custom Pricing</div>
+            <ul class="features">
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Positivo"> Unlimited Calls</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Positivo"> Unlimited Login</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Negativo"> Unlimited Sms</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Negativo"> Unlimited Emails</li>
+              <li><img src="assets/img/check-circle.svg" alt="Marcador Negativo"> Suport 24/7 All Days</li>
+            </ul>
+            <button>Contact Us</button>
           </div>
         </div>
       </div>
